@@ -1,3 +1,8 @@
+2004-01-09  Paul Brook  <paul@codesourcery.com>
+
+	* arm-opc.h (arm_opcodes): Move generic mcrr after known
+	specific opcodes.
+
 2004-01-07  Daniel Jacobowitz  <drow@mvista.com>
 
 	* Makefile.am (libopcodes_la_DEPENDENCIES)
