@@ -1,3 +1,10 @@
+2004-01-09  Paul Brook  <paul@codesourcery.com>
+
+	* config/tc-arm.c (do_vfp_reg2_from_sp2): Rename from do_vfp_sp_reg2.
+	(do_vfp_sp2_from_reg2): New function.
+	(insns): Use them.
+	(do_vfp_dp_from_reg2): Check return values properly.
+
 2004-01-08  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* config/tc-mips.c (warn_nops): Remove static variable.
